goit-markup-hw-07
Додає класи по БЕМ

--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,35 +1,35 @@
-.logoweb {
-    color: #2196F3;
-}
+// .logoweb {
+//     color: #2196F3;
+// }
 
-.logoheader {
-    color: #000000;
+// .logoheader {
+//     color: #000000;
     
-    font-family: $secondary-font;
-    font-weight: 700;
-    font-size: 26px;
+//     font-family: $secondary-font;
+//     font-weight: 700;
+//     font-size: 26px;
     
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+//     line-height: 1.19;
+//     letter-spacing: 0.03em;
 
-    padding-top: 24px;
-    padding-bottom: 25px;
+//     padding-top: 24px;
+//     padding-bottom: 25px;
     
-    text-decoration: none;
-}
+//     text-decoration: none;
+// }
 
-.logofooter {
-    color: #FFFFFF;
-    display: inline-block;
+// .logofooter {
+//     color: #FFFFFF;
+//     display: inline-block;
     
-    font-family: $secondary-font;
-    font-weight: 700;
-    font-size: 26px;
+//     font-family: $secondary-font;
+//     font-weight: 700;
+//     font-size: 26px;
     
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+//     line-height: 1.19;
+//     letter-spacing: 0.03em;
     
-    text-decoration: none;
+//     text-decoration: none;
 
-    margin-bottom: 20px;
-}
+//     margin-bottom: 20px;
+// }
