--- a/css/main.css
+++ b/css/main.css
@@ -62,33 +62,33 @@ body {
           align-items: center;
 }
 
-.site-nav {
+.header__logo {
+  color: #000000;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  padding-top: 24px;
+  padding-bottom: 25px;
+  text-decoration: none;
+}
+.header__logo_text {
+  color: #2196F3;
+}
+.header__site-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-left: 93px;
 }
-
-.site-nav .link {
-  position: relative;
-  color: #212121;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  text-decoration: none;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav .item + .item {
+.header__site-nav_item {
   margin-left: 50px;
 }
-
-.nav-contacts {
+.header__site-nav_item:first-child {
+  margin-left: 0;
+}
+.header__contacts {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -100,8 +100,57 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-
-.nav-contacts .link {
+.header__contacts_item {
+  margin-left: 50px;
+}
+.header__contacts_icons {
+  -ms-flex-item-align: center;
+      align-self: center;
+  margin-right: 10px;
+  fill: currentColor;
+}
+.header .site-nav_link {
+  position: relative;
+  color: #212121;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  text-decoration: none;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header .site-nav_link:hover {
+  color: #2196F3;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header .site-nav_link:focus {
+  color: #2196F3;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header .site-nav_link.current {
+  color: #2196F3;
+}
+.header .site-nav_link.current::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  height: 4px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  margin-bottom: -1px;
+  border-radius: 2px;
+  background-color: #2196F3;
+}
+.header .contacts_link {
   color: #757575;
   font-weight: 500;
   font-size: 14px;
@@ -116,42 +165,15 @@ body {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.nav-contacts .item + .item {
-  margin-left: 50px;
-}
-
-.site-nav .link:hover,
-.site-nav .link:focus,
-.nav-contacts .link:hover,
-.nav-contacts .link:focus {
+.header .contacts_link:hover {
   color: #2196F3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.link.current {
+.header .contacts_link:focus {
   color: #2196F3;
-}
-
-.link.current::after {
-  content: "";
-  position: absolute;
-  display: inline-block;
-  height: 4px;
-  width: 100%;
-  left: 0;
-  bottom: 0;
-  margin-bottom: -1px;
-  border-radius: 2px;
-  background-color: #2196F3;
-}
-
-.contact-icons {
-  -ms-flex-item-align: center;
-      align-self: center;
-  margin-right: 10px;
-  fill: currentColor;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero {
@@ -168,7 +190,7 @@ body {
   margin-right: auto;
 }
 
-.hero-title {
+.hero__title {
   color: #FFFFFF;
   font-weight: 900;
   font-size: 44px;
@@ -185,46 +207,13 @@ body {
   display: -ms-flexbox;
   display: flex;
 }
-
-.feature-list {
-  color: #757575;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-  padding-left: 0;
-  display: block;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.feature-title {
-  color: #212121;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-
-.feature-text {
-  color: #757575;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.feature .item + .item {
+.feature__item {
   margin-left: 30px;
 }
-
-.feature-pics {
+.feature__item:first-child {
+  margin-left: 0;
+}
+.feature__item_pics {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -240,6 +229,24 @@ body {
   margin-bottom: 30px;
   border-radius: 4px;
 }
+.feature__item_title {
+  color: #212121;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.feature__item_text {
+  color: #757575;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 0;
+}
 
 .worklist {
   display: -webkit-box;
@@ -250,19 +257,30 @@ body {
           justify-content: space-between;
   margin-bottom: 0;
 }
-
+.worklist__section {
+  padding-top: 0;
+  padding-bottom: 94px;
+}
+.worklist__title {
+  color: #212121;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 50px;
+}
 .worklist li {
   position: relative;
   overflow: hidden;
 }
-
-.worklist-img {
+.worklist__img {
   display: block;
   width: 100%;
   height: auto;
 }
-
-.worklist .label {
+.worklist__label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -287,12 +305,13 @@ body {
   margin: 0;
 }
 
-.worklist-section {
-  padding-top: 0;
-  padding-bottom: 94px;
+.family {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 0;
 }
-
-.worklist-title {
+.family__title {
   color: #212121;
   font-weight: 700;
   font-size: 36px;
@@ -302,15 +321,7 @@ body {
   margin-top: 0;
   margin-bottom: 50px;
 }
-
-.family {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 0;
-}
-
-.family .card {
+.family__card {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -318,28 +329,23 @@ body {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  margin-right: 30px;
 }
-
-.family .item + .item {
-  margin-left: 30px;
+.family__card:last-child {
+  margin-right: 0;
 }
-
-.family .photo {
+.family__card:hover, .family__card :focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.family__photo {
   margin-bottom: 0;
 }
-
-.family-title {
-  color: #212121;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-top: 0;
-  margin-bottom: 50px;
-}
-
-.family-name {
+.family__name {
   color: #212121;
   font-weight: 500;
   font-size: 16px;
@@ -349,20 +355,14 @@ body {
   margin-top: 0;
   margin-bottom: 10px;
 }
-
-.family-jobtitle {
+.family__jobtitle {
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   margin: 0;
 }
-
-.team {
-  padding-top: 30px;
-}
-
-.family-media {
+.family__media {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -372,7 +372,11 @@ body {
   margin: 16px 32px 30px 32px;
 }
 
-.section-clients {
+.team {
+  padding-top: 30px;
+}
+
+.clients {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -384,8 +388,7 @@ body {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-
-.clients-title {
+.clients__title {
   color: #212121;
   font-weight: 700;
   font-size: 36px;
@@ -395,8 +398,17 @@ body {
   margin-top: 0;
   margin-bottom: 50px;
 }
-
-.clients-list {
+.clients__title {
+  color: #212121;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+.clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -408,8 +420,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-
-.clients-item {
+.clients__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -428,24 +439,17 @@ body {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.clients-item:hover,
-.clients-item:focus {
+.clients__item:hover, .clients__item :focus {
   border-color: #2196F3;
   color: #2196F3;
   /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-
-.clients-icon {
+.clients__icon {
   fill: currentColor;
 }
 
-.portfolio-img {
-  display: block;
-}
-
-.portfolio-list {
+.portfolio__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -455,8 +459,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-
-.portfolio-list .card {
+.portfolio__card {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -464,13 +467,38 @@ body {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-
-.portfolio-list .image-wrapper {
+.portfolio__card:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio__card:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+.portfolio__card:hover, .portfolio__card :focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio__card:hover .overlay {
+  -webkit-transform: translatey(0);
+          transform: translatey(0);
+  /* opacity: 1; */
+}
+.portfolio__image_wrapper {
   position: relative;
   overflow: hidden;
 }
-
-.portfolio-title {
+.portfolio__link {
+  display: block;
+  text-decoration: none;
+  margin: 0;
+}
+.portfolio__img {
+  display: block;
+}
+.portfolio__title {
   color: #212121;
   font-weight: 700;
   font-size: 18px;
@@ -478,8 +506,7 @@ body {
   letter-spacing: 0.06em;
   margin: 0;
 }
-
-.portfolio-text {
+.portfolio__text {
   color: #757575;
   font-style: normal;
   font-weight: 400;
@@ -489,25 +516,17 @@ body {
   margin-top: 4px;
   margin-bottom: 0;
 }
-
-.portfolio-list .card:nth-child(3n) {
-  margin-right: 0;
-}
-
-.portfolio-list .card:nth-last-child(-n+3) {
-  margin-bottom: 0;
-}
-
-.portfolio-link {
-  display: block;
-  text-decoration: none;
-  margin: 0;
-}
-
-.portfolio-list .card:hover .overlay {
-  -webkit-transform: translatey(0);
-          transform: translatey(0);
-  /* opacity: 1; */
+.portfolio__border {
+  padding: 20px 24px;
+  border-right-width: 1px;
+  border-right-style: solid;
+  border-right-color: #EEEEEE;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #EEEEEE;
+  border-left-width: 1px;
+  border-left-style: solid;
+  border-left-color: #EEEEEE;
 }
 
 .overlay {
@@ -541,36 +560,12 @@ body {
   margin: 0;
 }
 
-.card:hover,
-.card:focus {
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-list .border {
-  padding: 20px 24px;
-  border-right-width: 1px;
-  border-right-style: solid;
-  border-right-color: #EEEEEE;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #EEEEEE;
-  border-left-width: 1px;
-  border-left-style: solid;
-  border-left-color: #EEEEEE;
-}
-
 .footer {
   background-color: #2F303A;
   padding-top: 60px;
   padding-bottom: 60px;
 }
-
-.footer-block {
+.footer__block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -578,33 +573,52 @@ body {
       -ms-flex-align: baseline;
           align-items: baseline;
 }
-
-.main-block {
+.footer__block_main {
   display: block;
 }
-
-.social-block {
-  display: inline;
-  width: 206px;
-  height: 80px;
-  margin-left: 70px;
-}
-
-.footer-nav {
-  margin: 0;
-}
-
-.footer-nav .link {
+.footer__address {
   text-decoration: none;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-style: normal;
 }
-
-.footer-nav .link:hover,
-.footer-nav .link:focus {
+.footer__address_text {
+  display: inline-block;
+  text-decoration: none;
+  font-style: normal;
+  color: #FFFFFF;
+  font-size: 14px;
+  line-height: 1.71;
+  margin-bottom: 9px;
+}
+.footer__address_mail {
+  display: inline-block;
+  text-decoration: none;
+  font-style: normal;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  line-height: 1.71;
+  margin-bottom: 9px;
+}
+.footer__address_tel {
+  display: inline-block;
+  text-decoration: none;
+  font-style: normal;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  line-height: 1.71;
+}
+.footer__logo {
+  color: #FFFFFF;
+  display: inline-block;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  margin-bottom: 20px;
+}
+.footer__logo_text {
   color: #2196F3;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section {
@@ -623,35 +637,7 @@ body {
   padding-bottom: 94px;
 }
 
-.logoweb {
-  color: #2196F3;
-}
-
-.logoheader {
-  color: #000000;
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  padding-top: 24px;
-  padding-bottom: 25px;
-  text-decoration: none;
-}
-
-.logofooter {
-  color: #FFFFFF;
-  display: inline-block;
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  margin-bottom: 20px;
-}
-
-.button-portfolio, .button-hero {
+.button__portfolio, .button__hero {
   background-color: #F5F4FA;
   font-size: 16px;
   line-height: 1.6;
@@ -680,7 +666,7 @@ body {
           box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.button-hero {
+.button__hero {
   color: #FFFFFF;
   background-color: #2196F3;
   font-weight: 700;
@@ -701,7 +687,7 @@ body {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-portfolio {
+.button__portfolio {
   font-family: inherit;
   color: #000000;
   background-color: #F5F4FA;
@@ -717,7 +703,7 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-btn {
+.portfolio__btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -726,6 +712,13 @@ body {
           justify-content: center;
   gap: 8px;
   margin-bottom: 50px;
+}
+
+.social-block {
+  display: inline;
+  width: 206px;
+  height: 80px;
+  margin-left: 70px;
 }
 
 .social-item {
@@ -767,6 +760,13 @@ body {
 
 .social-icon {
   fill: currentColor;
+}
+
+.social-block {
+  display: inline;
+  width: 206px;
+  height: 80px;
+  margin-left: 70px;
 }
 
 .social-item {
