--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -25,7 +25,7 @@
 }
 
 
-.button-hero {
+.button__hero {
     @extend %button;
     color: $primary-white-color;
     background-color: #2196F3;
@@ -41,7 +41,7 @@
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-portfolio {
+.button__portfolio {
     @extend %button;
     font-family: inherit;
     color: #000000;
@@ -57,7 +57,7 @@
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-btn {
+.portfolio__btn {
     display: flex;
     justify-content: center;
     gap: 8px;
