--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -1,3 +1,10 @@
+.social-block {
+    display: inline;
+    width: 206px;
+    height: 80px;
+    margin-left: 70px;
+}
+
 .social-item {
     margin-right: 10px;
 }
