--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,12 +1,11 @@
-.section-clients {
+.clients {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     padding-top: 94px;
     padding-bottom: 94px;
-}
 
-.clients-title {
+&__title {
     color: $title-text-color;
     font-weight: 700;
     font-size: 36px;
@@ -17,14 +16,25 @@
     margin-bottom: 50px;
 }
 
-.clients-list {
+&__title {
+    color: $title-text-color;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 0;
+    margin-bottom: 50px;
+}
+
+&__list {
     display: flex;
     gap: 30px;
     justify-content: center;
     align-items: center;
 }
 
-.clients-item {
+&__item {
     display: flex;
     justify-content: center;
     width: 170px;
@@ -35,16 +45,18 @@
     border-color: $border-color;
     border-radius: 4px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients-item:hover,
-.clients-item:focus {
+    
+    &:hover,:focus {
     border-color: $accent-color;
     color: $accent-color;
     /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
+	
+}
 
-.clients-icon {
+&__icon {
     fill: currentColor;
+}
+
 }
