--- a/sass/layout/_family.scss
+++ b/sass/layout/_family.scss
@@ -1,59 +1,67 @@
 .family {
     display: flex;
     margin-bottom: 0;
+
+    &__title {
+        color: $title-text-color;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.16;
+        text-align: center;
+        letter-spacing: 0.03em;
+        margin-top: 0;
+        margin-bottom: 50px;
+    }
+
+    &__card {
+        align-items: center;
+        background-color: $primary-white-color;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+        margin-right: 30px;
+        &:last-child {
+        margin-right: 0;
+        }
+
+        &:hover, :focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 }
 
-.family .card {
-    align-items: center;
-    background-color: $primary-white-color;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+    &__photo {
+        margin-bottom: 0;
 }
 
-.family .item + .item {
-    margin-left: 30px;
+    &__name {
+        color: $title-text-color;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.18;
+        text-align: center;
+        letter-spacing: 0.03em;
+        margin-top: 0;
+        margin-bottom: 10px;
 }
 
-.family .photo {
-    margin-bottom: 0;
+    &__jobtitle {
+        font-size: 16px;
+        line-height: 1.18;
+        text-align: center;
+        letter-spacing: 0.03em;
+        margin: 0;
 }
 
-.family-title {
-    color: $title-text-color;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-top: 0;
-    margin-bottom: 50px;
+    &__media {
+        display: flex;
+        justify-content: center;
+        margin: 16px 32px 30px 32px
 }
 
-.family-name {
-    color: $title-text-color;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-
-.family-jobtitle {
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin: 0;
 }
 
 .team {
     padding-top: 30px;
-}
-
-.family-media {
-    display: flex;
-    justify-content: center;
-    margin: 16px 32px 30px 32px
 }
