--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -1,20 +1,26 @@
 .feature {
     display: flex;
+
+&__item {
+    margin-left: 30px;
+
+    &:first-child {
+    margin-left: 0;
+    }
 }
 
-.feature-list {
-    color: $primary-text-color;
-    font-size: 14px;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
-    padding-left: 0;
-    display: block;
+&__item_pics {
+    display: flex;
+    justify-content: center;
+    width: 270px;
+    height: 120px;
     align-items: center;
-    margin-top: 0;
-    margin-bottom: 0;
+    background-color: $secondary-bg-color;
+    margin-bottom: 30px;
+    border-radius: 4px;
 }
 
-.feature-title {
+&__item_title {
     color: $title-text-color;
     font-weight: 700;
     font-size: 14px;
@@ -25,7 +31,7 @@
     margin-bottom: 10px;
 }
 
-.feature-text {
+&__item_text {
     color: $primary-text-color;
     font-size: 14px;
     line-height: 1.71;
@@ -34,17 +40,4 @@
     margin-bottom: 0;
 }
 
-.feature .item + .item {
-    margin-left: 30px;
-}
-
-.feature-pics {
-    display: flex;
-    justify-content: center;
-    width: 270px;
-    height: 120px;
-    align-items: center;
-    background-color: $secondary-bg-color;
-    margin-bottom: 30px;
-    border-radius: 4px;
 }
