--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,44 +7,61 @@
     align-items: center;
 }
 
-.site-nav {
+.header {
+
+    &__logo {
+    color: #000000;
+        
+    font-family: $secondary-font;
+    font-weight: 700;
+    font-size: 26px;
+        
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    
+    padding-top: 24px;
+    padding-bottom: 25px;
+        
+    text-decoration: none;
+    }
+    
+    &__logo_text {
+        color: #2196F3;
+    }
+
+    &__site-nav {
     display: flex;
     margin-left: 93px;
 }
 
-.site-nav .link {
-    position: relative;
-    
-    color: $title-text-color;
-    
-    font-weight: 500;
-    font-size: 14px;
-    
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    
-    display: block;
-    
-    padding-top: 32px;
-    padding-bottom: 32px;
-    
-    text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav .item + .item {
+    &__site-nav_item {
     margin-left: 50px;
+    
+    &:first-child {
+    margin-left: 0;
+    }
 }
 
-.nav-contacts {
+    &__contacts {
     display: flex;
     margin-left: auto;
     justify-content: center;
     align-items: center;
 }
 
-.nav-contacts .link {
-    color: $primary-text-color;
+    &__contacts_item {
+    margin-left: 50px;
+}
+
+    &__contacts_icons {
+    align-self: center;
+    margin-right: 10px;
+    fill: currentColor;
+}
+
+.site-nav_link {
+    position: relative;
+    color: $title-text-color;;
     
     font-weight: 500;
     font-size: 14px;
@@ -59,44 +76,68 @@
     
     text-decoration: none;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.nav-contacts .item + .item {
-    margin-left: 50px;
-}
+    &:hover {
+        color: $accent-color;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-.site-nav .link:hover,
-.site-nav .link:focus,
-.nav-contacts .link:hover,
-.nav-contacts .link:focus {
-    color: $accent-color;
+    &:focus {
+        color: $accent-color;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    }
+
+.site-nav_link.current {
+        color: $accent-color;
+    }
+
+
+.site-nav_link.current::after {
+        content: '';
+    
+        position: absolute;
+        display: inline-block;
+    
+        height: 4px;
+        width: 100%;
+    
+        left: 0;
+        bottom: 0;
+        margin-bottom: -1px;
+    
+        border-radius: 2px;
+    
+        background-color: $accent-color;
+    }
+
+.contacts_link {
+    color: $primary-text-color;
+        
+    font-weight: 500;
+    font-size: 14px;
+        
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+        
+    display: inline-flex;
+        
+    padding-top: 32px;
+    padding-bottom: 32px;
+        
+    text-decoration: none;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link.current {
-    color: $accent-color;
-}
-
-.link.current::after {
-    content: '';
-
-    position: absolute;
-    display: inline-block;
-
-    height: 4px;
-    width: 100%;
-
-    left: 0;
-    bottom: 0;
-    margin-bottom: -1px;
-
-    border-radius: 2px;
-
-    background-color: $accent-color;
-}
-
-.contact-icons {
-    align-self: center;
-    margin-right: 10px;
-    fill: currentColor;
+    
+    &:hover {
+        color: $accent-color;
+         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+    &:focus {
+        color: $accent-color;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        
+    }
 }
