--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 // BASE
 @import "./utils/variables";
-@import "./base/colors";
+@import "./utils/placeholders";
 @import "./base/base";
 
 // UTILS
