--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,30 +1,3 @@
-%button {
-    background-color: #F5F4FA;
-    font-size: 16px;
-    line-height: 1.6;
-    text-align: center;
-    letter-spacing: 0.03em;
-    border: 0 solid;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.button:focus,
-.button:hover {
-    color: $primary-white-color;
-    background-color: $accent-color;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-portfolio:focus,
-.button-portfolio:hover {
-    color: $primary-white-color;
-    background-color: $accent-color;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
-}
-
-
 .button__hero {
     @extend %button;
     color: $primary-white-color;
@@ -55,6 +28,12 @@
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus, &:hover {
+    color: $primary-white-color;
+    background-color: $accent-color;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
+}
 }
 
 .portfolio__btn {
