--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -48,17 +48,11 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: transparent;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.close-button:hover,
-.close-button:focus {
+    &:hover, &:focus {
     fill: $accent-color;
 }
-
-/* .request-form {
-    align-items: center;
-    justify-content: center;
-} */
+}
 
 .request-title {
     color: rgba(33, 33, 33, 1);
@@ -72,7 +66,6 @@
 }
 
 .request-form .name, .tel, .mail, .comment {
-    /* display: block; */
     font-weight: 400;
     font-size: 12px;
     line-height: 1.16;
@@ -142,19 +135,16 @@
     background-color: transparent;
     color: $primary-text-color;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-input:focus,
-.modal-input:hover {
+    
+    &:focus, &:hover {
     outline: 0;
     border-color: $accent-color;
     fill: $accent-color;
 }
 
-.modal-input:focus + .input-icon,
-.modal-input:hover + .input-icon {
-    border-color: $accent-color;
+    &:focus + .input-icon, &:hover + .input-icon {
     fill: $accent-color;
+}
 }
 
 .request-textarea {
@@ -218,9 +208,8 @@
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.request-button:focus,
-.request-button:hover {
-    background-color: #188CE8;
+    &:focus, &:hover {
+        background-color: #188CE8;
+    }
 }
