--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,9 +1,8 @@
 .subscribe {
     justify-content: center;
     margin-left: auto;
-}
 
-.subscribe-form {
+&__form {
     display: flex;
     margin-top: 20px;
     justify-content: center;
@@ -11,7 +10,7 @@
     margin-left: auto;
 }
 
-.subscribe-title {
+&__title {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -21,7 +20,7 @@
     margin: 0;
 }
 
-.subscribe-input {
+&__input {
     display: inline;
     width: 358px;
     height: 50px;
@@ -30,23 +29,22 @@
     background-color: transparent;
     padding-left: 16px;
     color: $primary-white-color;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-}
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.subscribe-input::placeholder {
+    &::placeholder {
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
 
-.subscribe-input:focus,
-.subscribe-input:hover {
+    &:hover, &:focus {
     outline: 0;
     border-color: $accent-color;
 }
+}
 
-.subscribe-button {
+&__button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,17 +67,18 @@
     cursor: pointer;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover, &:focus {
+    color: $primary-white-color;
+    background-color: #006ec7;
+}
 }
 
-.subscribe-icon {
+&__icon {
     fill: $primary-white-color;
     margin-left: 10px;
     right: 28px;
     top: 13px;
 }
 
-.subscribe-button:focus,
-.subscribe-button:hover {
-    color: $primary-white-color;
-    background-color: #006ec7;
 }
