--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -16,17 +16,6 @@
     margin-bottom: 50px;
 }
 
-&__title {
-    color: $title-text-color;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-top: 0;
-    margin-bottom: 50px;
-}
-
 &__list {
     display: flex;
     gap: 30px;
@@ -46,7 +35,7 @@
     border-radius: 4px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
-    &:hover,:focus {
+    &:hover, &:focus {
     border-color: $accent-color;
     color: $accent-color;
     /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
