--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -35,6 +35,7 @@
     font-size: 14px;
     line-height: 1.71;
     margin-bottom: 9px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 &__address_tel {
@@ -66,12 +67,25 @@
         color: #2196F3;
     }
 
-// &__block_social {
-//     display: inline;
-//     width: 206px;
-//     height: 80px;
-//     margin-left: 70px;
-// }
+&__social_block {
+    display: block;
+    width: 206px;
+    height: 80px;
+    margin-left: 70px;
+}
+}
+
+.link {
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover, &:focus {
+    color: $accent-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+}
+
+
 
 // &__social_title {
 //     display: inline-flex;
@@ -143,4 +157,3 @@
 //     color: $accent-color;
 //     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 // }
-}
